third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/closures_in_enums.decompiled.baseline.exp
processed 5 tasks
task 0 lines 3-164:  publish [module 0xc0ffee::m {]
Error: compilation errors:
 error: cannot select field `_0` since it has different types in variants of enum `Function`
   ┌─ TEMPFILE:18:10
   │
18 │         &p0._0
   │          ^^
   │
   = field `_0` has type `|u64, u64|u64 has copy + drop` in variant `TwoParam` and type `||u64 has copy + drop` in variant `NoParam` and type `|u64|u64 has copy + drop` in variant `OneParam`


task 1 lines 167-167:  run 0xc0ffee::m::test_1
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 2 lines 169-169:  run 0xc0ffee::m::test_2
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 3 lines 171-171:  run 0xc0ffee::m::test_3
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 4 lines 173-173:  run 0xc0ffee::m::test_4
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
